[package]
name = "movie-thumbnailer"
version = "0.1.0"
authors = ["Kirill <elephanttalk@protonmail.com>"]

[dependencies]
rayon = "1.3.0"

[dependencies.clap]
version = "~2.33.0"
default-features = false


# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

